# semiconductor-yield-analytics

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
app/: main.py
configs/: module_a.yaml  module_b.yaml
data/synthetic/: process_data.csv
docs/: data_contract.md  interview_notes.md  level2_consolidation_report.md  project_plan.md
outputs/reports/wafer/: class_distribution.csv  imbalance_report.csv  wafer_map_sizes.csv
scripts/: compare_wafer_runs.py  download_data.py  evaluate_process_anomaly.py  evaluate_wafer_cnn.py  generate_synthetic_data.py  generate_synthetic_process_data.py  run_dashboard.py  run_module_b_pipeline.py  run_process_rca.py  run_spc_analysis.py  run_wafer_demo.py  run_wafer_eda.py  train_module_a.py  train_process_anomaly.py  train_wafer_cnn.py  validate_wafer_dashboard_inference.py
src/semiconductor_yield/: __init__.py  config.py
src/semiconductor_yield/dashboard/: __init__.py  app.py  data_helpers.py  wafer_demo.py
src/semiconductor_yield/models/: __init__.py  wafer_cnn.py
src/semiconductor_yield/process/: __init__.py  anomaly.py  features.py  rca.py  report.py  spc.py  synthetic.py  visualization.py
src/semiconductor_yield/utils/: __init__.py
src/semiconductor_yield/wafer/: __init__.py  data_loader.py  dataset.py  demo_samples.py  eda.py  evaluate.py  inference.py  preprocess.py  train.py
tests/: conftest.py  test_anomaly.py  test_dashboard.py  test_data_paths.py  test_rca.py  test_smoke.py  test_spc.py  test_synthetic_data.py  test_wafer_cnn.py  test_wafer_eda.py  test_wafer_inference.py  test_wafer_preprocess.py
