[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semiconductor-yield-analytics"
version = "0.1.0"
description = "Wafer map defect classification and SPC-based process anomaly detection platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wang Handa", email = "wanghanda1129@gmail.com" }]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "torchvision>=0.17",
    "plotly>=5.20",
    "streamlit>=1.35",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "pillow>=10.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
]

[project.scripts]
sya-generate-data = "scripts.generate_synthetic_data:main"
sya-train-wafer = "scripts.train_module_a:main"
sya-run-spc = "scripts.run_module_b_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["semiconductor_yield"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
